--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas
-openpyxl
-plotly
-scikit-learn
-tensorflow
-matplotlib
-Pillow
+streamlit==1.28.2
+pandas==1.5.3
+openpyxl==3.1.2
+plotly==5.18.0
+scikit-learn==1.2.2
+tensorflow==2.12.0
+matplotlib==3.7.1
+Pillow==9.5.0
